OAR CHANGELOG
=============

version 2.5.x:
--------------
  - Bugfix: /var/lib/oar/.bash_oar was empty due to an error in the common setup script.
  - Bugfix: the PINGCHECKER_COMMAND in oar.conf depends now on %%OARDIR%%.
  - Bug #13939: the job_resource_manager.pl and job_resource_manager_cgroups.pl
                now deletes the user files in /tmp, /var/tmp and /dev/shm at
                the end of the jobs.
  - Bugfix: in oardodo.c, the preprocessed variables was not defined correclty.
  - Finaud: fix race condition when there was a PINGCHECKER error jsut before
    another problem. The node became Alive again when the PINGCHECKER said OK
    BUT there was another error to resolve.
  - Bugfix: The feature CHECK_NODES_WITH_RUNNING_JOB=yes never worked before.
  - Speedup monika (X5).

version 2.5.1:
--------------
  - Sources directories reorganized
  - New "Phoenix" tool to try to reboot automatically broken nodes
    (to setup into /etc/oar/oar_phoenix.pl)
  - New (experimental!) scheduler written in Ocaml
  - Cpusets are activated by default
  - Bugfix #11065: oar_resource_init fix (add a space)
  - Bug 10999: memory leak into Hulot when used with postgresql. The leak has been
    minimized, but it is still there (DBD::Pg bug)
  - Almighty cleans ipcs used by oar on exit 
  - Bugfix #10641 and #10999 : Hulot is automatically and periodically restarted
  - Feature request #10565: add the possibility to check the aliveness of the
    nodes of a job at the end of this one (pingchecker) 
  - REST API heavily updated: new data structures with paginated results, desktop
    computing functions, rspec tests, oaradmin resources management, admission
    rules edition, relative/absolutes uris fixed
  - New ruby desktop computing agent using REST API (experimental)
  - Experimental testsuite
  - Poar: web portal using the REST API (experimental)
  - Oaradmin YAML export support for resources creation (for the REST API)