@@ -3,7 +3,8 @@ OAR CHANGELOG
 
 version 2.5.x:
 --------------
-  - Bugfix: /var/lib/oar/.bash_oar was empty due to an error in the common setup script.
+  - Bugfix: /var/lib/oar/.bash_oar was empty due to an error in the common
+    setup script.
   - Bugfix: the PINGCHECKER_COMMAND in oar.conf depends now on %%OARDIR%%.
   - Bug #13939: the job_resource_manager.pl and job_resource_manager_cgroups.pl
                 now deletes the user files in /tmp, /var/tmp and /dev/shm at
@@ -14,6 +15,8 @@ version 2.5.x:
     BUT there was another error to resolve.
   - Bugfix: The feature CHECK_NODES_WITH_RUNNING_JOB=yes never worked before.
   - Speedup monika (X5).
+  - Monika: Add the conf max_cores_per_line to have several lines if the number
+    of cores are too big.
 
 version 2.5.1:
 --------------
